--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Gallery</title>
 
-    <!-- Підключаємо бібліотеку basicLightbox -->
-
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.js"
@@ -17,12 +15,12 @@
       href="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.css"
     />
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section class="container">
       <ul class="gallery"></ul>
     </section>
-    <script src="js/gallery.js"></script>
+    <script src="./js/gallery.js" type="module"></script>
   </body>
 </html>
